--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".view.activity.CreatePwdActivity" />
         <activity
+            android:theme="@style/dialog"
             android:name=".view.activity.PasswordUnlockActivity"
             android:exported="true">
             <intent-filter>
@@ -44,5 +45,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
 
 </manifest>
