--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'org.litepal.android:java:3.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.3'
     implementation 'com.android.support:design:28.0.3'
     testImplementation 'junit:junit:4.12'
