--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.miki.applock"
+        applicationId "com.miki.settings.applock"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
